# fyers

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: auth.rs  client.rs
src/: auth.rs  client.rs  datetime.rs  endpoints.rs  error.rs  lib.rs  models.rs  urls.rs  utils.rs
src/auth/: error.rs  helpers.rs  types.rs
src/endpoints/: history.rs  orders.rs  place_order.rs  positions.rs  profile.rs
src/endpoints/orders/: cancel_order.rs  place_order.rs
src/endpoints/positions/: cancel_pending_orders.rs  exit_all_positions.rs
src/models/: api_response.rs  history.rs  orders.rs  positions.rs  profile.rs
src/models/history/: candle_resolution.rs  history_request.rs  history_response.rs
src/models/orders/: order.rs  order_type.rs  place_order_request.rs  product_type.rs  side.rs  validity.rs
src/models/positions/: exit_position_result.rs
tests/: cancel_order.rs  cancel_pending_orders.rs  error.rs  exit_all_positions.rs  history.rs  place_order.rs  profile.rs
tests/common/: mod.rs
tests/fixtures/: history_success.json  order_cancel_success.json  order_success.json  profile_success.json
tests/fixtures/error/: invalid.json  invalid_token.json  missing_field.json  random_error.json
tests/fixtures/positions/: positions_closed_success.json  positions_pending_counter_order.json
